--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "esm": "^3.2.25",
     "express": "~4.16.1",
     "mongoose": "^5.10.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
